test/Runner/errors/tests/MI/Seed/Test.seedconf3.js
eve("Suite", () => {
	seed('Seed', () => {

	}, {
		timeout: 'foo'
	});
});